scripts/nullaway/annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8.txt
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/json/XML.java:79: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/json/CDL.java:146: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/json/CDL.java:210: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/tools/MCrypt.java:25: error: [NullAway] initializer method does not guarantee @NonNull field cipher (line 23) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MCrypt(String SecretKey)
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/tools/HexTools.java:66: error: [NullAway] dereferenced expression encoded is @Nullable
		if ((encoded.length() % 2) != 0)
		            ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/printer.java:217: error: [NullAway] dereferenced expression printer.NameTable is @Nullable
                    g2.drawString(printer.NameTable[i]+" "+printer.JSONTable[i], 15, printer.null_print_line);
                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/printer.java:217: error: [NullAway] dereferenced expression printer.JSONTable is @Nullable
                    g2.drawString(printer.NameTable[i]+" "+printer.JSONTable[i], 15, printer.null_print_line);
                                                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/cashe_machine.java:93: error: [NullAway] initializer method does not guarantee @NonNull fields deviceAnswerDATA (line 66), deviceAnswerSTATE (line 69) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public cashe_machine(@Nullable Service service)
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/cashe_machine.java:30: error: [NullAway] @NonNull static field d not initialized
    static Device d;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/cashe_machine.java:505: error: [NullAway] dereferenced expression table is @Nullable
        if (table.length() == 240)
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/cashe_machine.java:612: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.deviceAnswerSTATE = null;
                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/cashe_machine.java:674: error: [NullAway] dereferenced expression dataByte is @Nullable
            for (int i=0; i<dataByte.length; i++)
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/Device.java:51: error: [NullAway] assigning @Nullable expression to @NonNull field
	private InputStream portInputStream = null;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/Device.java:222: error: [NullAway] dereferenced expression serialPort is @Nullable
        serialPort.close();
                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/Device.java:298: error: [NullAway] unboxing of a @Nullable value
	     			if (this.WinOS)
	     			   ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/Device.java:334: error: [NullAway] dereferenced expression portOutputStream is @Nullable
			portOutputStream.write(b);
			                ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/devices/Device.java:370: error: [NullAway] dereferenced expression commPort is @Nullable
		commPort.close();
		        ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/service/ServiceRunner.java:91: error: [NullAway] dereferenced expression rn is @Nullable
			if (!rn.exists())
			       ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/http_server/HttpServer.java:44: error: [NullAway] dereferenced expression serverSocket is @Nullable
                Socket clientSocket = serverSocket.accept();
                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/http_server/HttpServer.java:47: error: [NullAway] dereferenced expression t is @Nullable
                    t.stop();
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlce7759b8da_Palachsuper_EBA4_tgz-pJ8-json_TestJ8/src/terminal/http_server/ClientSession.java:135: error: [NullAway] dereferenced expression s is @Nullable
        int len = s.length();
                   ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
21 errors
